--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
   "author": "Colin Murphy",
+  "description": "A project that is cool",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
